[package]
name = "traewelling-exporter"
version = "0.3.0"
authors = ["Marie Ramlow <me@nycode.dev>"]
description = "Prometheus Exporter for traewelling.de"
license = "MIT OR Apache-2.0"
publish = false
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
itertools = "0.10"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
cached = "0.41"

[profile.release]
lto = true
